# 26s-w3-c3-05

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: README.md  gesture_capability_map.json
data/: README.md
data/two_finger_direction/: samples_20260722_173756.json
documents/: decisions.md  development-principles.md  gaze.md  gesture-fusion.md  interface-contract.md  plan.md  product.md  repository-structure.md  runtime-protocol.md  tech-spec.md
models/: README.md  gesture_tcn_finetuned.baseline-epoch76-f1_9537.pt  gesture_tcn_finetuned.baseline-epoch76-f1_9537.pt.metadata.json  gesture_tcn_finetuned.epoch67-f1_9333.pt  gesture_tcn_finetuned.epoch67-f1_9333.pt.metadata.json  gesture_tcn_finetuned.pt  gesture_tcn_finetuned.pt.metadata.json  gesture_tcn_finetuned.widened-ep95-f1_9365.pt  gesture_tcn_finetuned.widened-ep95-f1_9365.pt.metadata.json  gesture_tcn_jester.pt  gesture_tcn_jester.pt.metadata.json  gesture_tcn_jester.pt.metadata.json.pre-gpu-backup  gesture_tcn_jester.pt.pre-gpu-backup  hand_pose_classifier.pt
src/jarvis/: __init__.py
src/jarvis/calibration/: __init__.py  profiles.py  registry.py  session.py  target_registration.py  triangulation.py
src/jarvis/contracts/: __init__.py  messages.py
src/jarvis/engine_port/: README.md  __init__.py  client.py  compare.py  legacy_worker.py  metrics.py  protocol.py  setup_legacy_env.py
src/jarvis/gaze/: README.md  __init__.py  blink.py  calibration_model.py  classifier.py  cli.py  composition_diagnostics.py  config.py  direction.py  engine.py  evaluation.py  feature_profile.py  features.py  landmarks.py  lock.py  mlp_calibration.py  motion_intent.py  nod.py  personal_classifier.py  registration_lint.py  ridge_residual.py  session_report.py  smoothing.py  target_verification.py
src/jarvis/gesture_fusion/: README.md  __init__.py  alignment.py  config.py  dedup.py  features.py  fusion.py  hard_negative_mining.py  intent.py  landmarks.py  mediapipe_hands.py  model.py  model_protocol.py  pose_classifier.py  pose_protocol.py  pose_state.py  smoothing.py  solutions_hands.py  spotting.py
src/jarvis/monitoring/: __init__.py  app.py  bulb_poller.py  bulb_probe.py  camera_worker.py  cli.py  console.py  demo.py  demo_bridge.py  demo_panel.py  execute_worker.py  gaze_probe.py  gaze_samples.py  gaze_source.py  gesture_probe.py  gesture_source.py  hand_probe.py  messages.py  overlay.py  pipeline_status.py  pose_control.py  render.py  session_recorder.py  session_replay.py  snapshot.py  virtual_bulb.py
src/jarvis/pointer/: __init__.py  mapper.py
src/jarvis/reference_port/: README.md  __init__.py  compare.py  demo.py  keypoint_classifier.py  keypoint_weights.npz  legacy_engine_demo.py
src/jarvis/runtime/: __init__.py  devices.py  executor.py
src/jarvis/runtime_protocol/: README.md  __init__.py  config.py
src/jarvis/runtime_protocol/adapters/: __init__.py  base.py  http.py  macos.py  smartthings.py  windows.py  wiz.py
src/jarvis/runtime_protocol/capture/: __init__.py  clock.py  frame.py  pipeline.py  queue.py  source.py
src/jarvis/runtime_protocol/protocol/: __init__.py  capability.py  engine.py  ledger.py  lifecycle.py
tests/contract/: README.md  test_command_contract.py  test_gaze_target_estimate.py
tests/integration/: README.md  test_demo_end_to_end.py  test_fusion_to_command.py
tests/replay/: README.md  test_gaze_targeting_replay.py
tests/training/: test_augment.py  test_clip_cache.py  test_clip_recorder.py  test_dataset.py  test_extract_jester.py  test_extract_trim.py  test_jester_labels.py  test_losses.py  test_metrics.py  test_phase_labels.py  test_train.py  test_train_pose.py  test_training_config.py
tests/unit/: README.md  test_adapter_dispatch.py  test_adapter_macos.py  test_adapter_smartthings.py  test_adapter_windows.py  test_adapter_wiz.py  test_bulb_probe.py  test_capture_clock.py  test_capture_pipeline.py  test_capture_queue.py  test_config_env.py  test_console.py  test_demo_bridge.py  test_demo_panel.py  test_engine_port.py  test_execute_worker.py  test_gaze_lint_replay.py  test_gesture_probe.py  test_monitoring.py  test_monitoring_app.py  test_monitoring_core.py  test_monitoring_gaze.py  test_monitoring_gaze_samples.py  test_monitoring_gaze_session.py  test_monitoring_hand.py  test_monitoring_overlay.py  test_pose_control.py  test_protocol_capability.py  test_protocol_engine.py  test_protocol_ledger.py  test_protocol_lifecycle.py  test_reference_port.py  test_solutions_hands.py  test_telemetry_events.py  test_telemetry_latency.py  test_virtual_bulb.py
tests/unit/calibration/: test_profiles.py  test_registration_coverage.py  test_session.py  test_target_registry.py  test_triangulation.py
tests/unit/gaze/: test_blink.py  test_calibration_model.py  test_classifier.py  test_cli.py  test_composition_diagnostics.py  test_config.py  test_direction.py  test_engine.py  test_evaluation.py  test_features.py  test_gaze_landmarks.py  test_landmarks.py  test_lock.py  test_mlp_calibration.py  test_motion_intent.py  test_nod.py  test_personal_classifier.py  test_pose_correction.py  test_ridge_residual.py  test_smoothing.py  test_target_verification.py
tests/unit/gesture_fusion/: test_alignment.py  test_dedup.py  test_early_dispatch.py  test_fusion.py  test_gesture_config.py  test_gesture_features.py  test_gesture_smoothing.py  test_hard_negative_mining.py  test_intent.py  test_landmarks.py  test_model.py  test_model_config.py  test_model_protocol.py  test_palm_tilt.py  test_pose_state.py  test_spotting.py
tests/unit/pointer/: test_mapper.py
tests/unit/runtime/: test_devices.py  test_executor.py
tools/: README.md  finger_gate_probe.py  two_finger_direction_probe.py  two_finger_swipe_live.py
training/: README.md  __init__.py  augment.py  clip_recorder.py  config.py  dataset.py  evaluate.py  losses.py  metrics.py  phase_labels.py  record_webcam_clips.py  relabel_cache.py  train.py  train_pose.py
training/data/: __init__.py  clip_cache.py  jester_labels.py  jester_manifest.py
training/extract/: __init__.py  extract_jester.py
(+3 files in other folders)
