[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-runtime"
version = "0.1.0"
description = "Local gaze-grounded motion control runtime"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26,<3",
]

[project.scripts]
jarvis-gaze = "jarvis.gaze.cli:main"
jarvis-monitor = "jarvis.monitoring.cli:main"

[project.optional-dependencies]
vision = [
  "mediapipe>=0.10,<0.11",
  "opencv-python>=4.9,<5",
]
ui = [
  "PySide6>=6.6,<7",
  "opencv-python>=4.9,<5",
]
macos = [
  "pyobjc-framework-Quartz>=10,<12; sys_platform == 'darwin'",
  "pyobjc-framework-Cocoa>=10,<12; sys_platform == 'darwin'",
]
dev = [
  "pytest>=8,<9",
  "ruff>=0.9,<1",
  "mypy>=1.14,<2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["jarvis"]

# cv2 (OpenCV) is an optional `vision` extra and ships no type stubs; treat its
# imports as untyped whether or not it is installed in the current environment.
# MediaPipe is optional for the same camera-only boundary.
[[tool.mypy.overrides]]
module = ["cv2", "mediapipe.*"]
ignore_missing_imports = true

# PyObjC (Quartz/AppKit) is an optional `macos` extra isolated to
# jarvis.runtime_protocol.adapters.macos (same import-boundary pattern as
# mediapipe above) and ships no type stubs.
[[tool.mypy.overrides]]
module = ["Quartz", "Quartz.*", "AppKit", "AppKit.*"]
ignore_missing_imports = true
